Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="sample-projects-for-the-light-lcl-llcl" class="anchor" href="#sample-projects-for-the-light-lcl-llcl" aria-hidden="true"><span class="octicon octicon-link"></span></a>Sample projects for the Light LCL (LLCL)</h1>
+<a id="sample-projects-for-the-light-lcl-llcl" class="anchor" href="#sample-projects-for-the-light-lcl-llcl" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sample projects for the Light LCL (LLCL)</h1>
 
 <p>Various Free Pascal/Lazarus and Delphi sample projects, to
 compile with the Free Pascal/Lazarus Light LCL (LLCL): <a href="https://FChrisF.github.io/LLCL">Light LCL (LLCL)</a></p>
@@ -52,10 +52,19 @@ compiled using the LLCL or the standard LCL/VCL (see for each
 sample in README.txt).</p>
 
 <h2>
-<a id="using-only-the-llcl" class="anchor" href="#using-only-the-llcl" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using only the LLCL</h2>
+<a id="using-only-the-llcl" class="anchor" href="#using-only-the-llcl" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using only the LLCL</h2>
 
 <h3>
-<a id="filecrc" class="anchor" href="#filecrc" aria-hidden="true"><span class="octicon octicon-link"></span></a>FileCRC</h3>
+<a id="compfiles" class="anchor" href="#compfiles" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CompFiles</h3>
+
+<p>Compare and search for identical files (same size and same
+content) between 2 directories, or inside 1 directory.</p>
+
+<p><a href="captures/compfiles-screen.png"><img src="captures/compfiles-screen-th.png" alt="CompFiles screenshot"></a>
+<a href="captures/compfiles-results.png"><img src="captures/compfiles-results-th.png" alt="CompFiles results"></a></p>
+
+<h3>
+<a id="filecrc" class="anchor" href="#filecrc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>FileCRC</h3>
 
 <p>CRC32 and hash computes (MD5/SHA-1) for a file chosen by the
 user.</p>
@@ -64,17 +73,17 @@ user.</p>
 <a href="captures/filecrc-fileselect.png"><img src="captures/filecrc-fileselect-th.png" alt="FileCRC fileselect"></a></p>
 
 <h3>
-<a id="minicalc" class="anchor" href="#minicalc" aria-hidden="true"><span class="octicon octicon-link"></span></a>MiniCalc</h3>
+<a id="minicalc" class="anchor" href="#minicalc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>MiniCalc</h3>
 
 <p>A very simple integer calculator.</p>
 
 <p><a href="captures/minicalc-screen.png"><img src="captures/minicalc-screen-th.png" alt="MiniCalc screenshot"></a></p>
 
 <h2>
-<a id="using-the-llcl-and-the-windows-apis" class="anchor" href="#using-the-llcl-and-the-windows-apis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using the LLCL and the Windows APIs</h2>
+<a id="using-the-llcl-and-the-windows-apis" class="anchor" href="#using-the-llcl-and-the-windows-apis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using the LLCL and the Windows APIs</h2>
 
 <h3>
-<a id="peping" class="anchor" href="#peping" aria-hidden="true"><span class="octicon octicon-link"></span></a>PePing</h3>
+<a id="peping" class="anchor" href="#peping" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>PePing</h3>
 
 <p>Periodic ping for a given URL (Systray using).</p>
 
@@ -82,7 +91,7 @@ user.</p>
 <a href="captures/peping-trayico.png"><img src="captures/peping-trayico-th.png" alt="PePing trayicon"></a></p>
 
 <h3>
-<a id="visual" class="anchor" href="#visual" aria-hidden="true"><span class="octicon octicon-link"></span></a>Visual</h3>
+<a id="visual" class="anchor" href="#visual" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Visual</h3>
 
 <p>Using GDI and OpenGL APIs.</p>
 
@@ -93,10 +102,10 @@ user.</p>
 <p><a href="captures/visual3-screen.png"><img src="captures/visual3-screen-th.png" alt="Visual screenshot 3"></a></p>
 
 <h2>
-<a id="using-a-modified-version-of-the-llcl" class="anchor" href="#using-a-modified-version-of-the-llcl" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using a modified version of the LLCL</h2>
+<a id="using-a-modified-version-of-the-llcl" class="anchor" href="#using-a-modified-version-of-the-llcl" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using a modified version of the LLCL</h2>
 
 <h3>
-<a id="getwebpage" class="anchor" href="#getwebpage" aria-hidden="true"><span class="octicon octicon-link"></span></a>GetWebPage</h3>
+<a id="getwebpage" class="anchor" href="#getwebpage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GetWebPage</h3>
 
 <p>HTTP Get/Post using Indy. This sample requires a modified
 version of the LLCL (a simple program to modify it is provided
@@ -105,20 +114,20 @@ with this sample).</p>
 <p><a href="captures/getwebpage-screen.png"><img src="captures/getwebpage-screen-th.png" alt="GetWebPage screenshot"></a></p>
 
 <h2>
-<a id="comparison-of-executable-sizes" class="anchor" href="#comparison-of-executable-sizes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Comparison of executable sizes</h2>
+<a id="comparison-of-executable-sizes" class="anchor" href="#comparison-of-executable-sizes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comparison of executable sizes</h2>
 
 <p>Comparison of executable sizes between the standard (LCL/VCL)
 and the LLCL versions for the different sample projects</p>
 
 <p>Executables have been build with the same conditions in each
 cases: architecture (32 bits), debugging (no debugging),
-optimization level, icon files, ...</p>
+optimization level, icon files, FPC version ...</p>
 
 <table>
 <thead>
 <tr>
 <th align="left">Project</th>
-<th align="center">LCL (Lazarus 1.4.2)</th>
+<th align="center">LCL (Lazarus 1.4.4)</th>
 <th align="center">LLCL Free Pascal</th>
 <th align="center">VCL (Delphi7)</th>
 <th align="center">LLCL Delphi</th>
@@ -127,45 +136,99 @@ optimization level, icon files, ...</p>
 <tbody>
 <tr>
 <td align="left">Demo LLCLTest(1)</td>
-<td align="center">1717 Kb</td>
-<td align="center">140 Kb</td>
+<td align="center">1721 Kb</td>
+<td align="center">141 Kb</td>
 <td align="center">464 Kb</td>
 <td align="center">89 Kb</td>
 </tr>
 <tr>
+<td align="left">CompFiles</td>
+<td align="center">1888 Kb</td>
+<td align="center">163 Kb</td>
+<td align="center">465 Kb</td>
+<td align="center">101 Kb</td>
+</tr>
+<tr>
 <td align="left">FileCRC</td>
-<td align="center">1695 Kb</td>
-<td align="center">140 Kb</td>
+<td align="center">1696 Kb</td>
+<td align="center">141 Kb</td>
 <td align="center">402 Kb</td>
 <td align="center">90 Kb</td>
 </tr>
 <tr>
 <td align="left">MiniCalc</td>
-<td align="center">1651 Kb</td>
+<td align="center">1652 Kb</td>
 <td align="center">118 Kb</td>
 <td align="center">379 Kb</td>
 <td align="center">75 Kb</td>
 </tr>
 <tr>
 <td align="left">PePing</td>
-<td align="center">1685 Kb</td>
-<td align="center">134 Kb</td>
+<td align="center">1699 Kb</td>
+<td align="center">141 Kb</td>
 <td align="center">(3)</td>
-<td align="center">87 Kb</td>
+<td align="center">92 Kb</td>
 </tr>
 <tr>
-<td align="left">Visual</td>
-<td align="center">1706 Kb</td>
-<td align="center">186 Kb</td>
+<td align="left">Visual(4)</td>
+<td align="center">1707 Kb</td>
+<td align="center">212 Kb</td>
 <td align="center">404 Kb</td>
-<td align="center">85 Kb</td>
+<td align="center">106 Kb</td>
 </tr>
 <tr>
 <td align="left">GetWebPage(2)</td>
-<td align="center">2233 Kb</td>
-<td align="center">809 Kb</td>
+<td align="center">2237 Kb</td>
+<td align="center">813 Kb</td>
 <td align="center">830 Kb</td>
 <td align="center">590 Kb</td>
+</tr>
+</tbody>
+</table>
+
+<table>
+<thead>
+<tr>
+<th align="left">Project</th>
+<th align="center">LCL (Lazarus 1.6.0)</th>
+<th align="center">LLCL Free Pascal</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="left">Demo LLCLTest(1)</td>
+<td align="center">1726 Kb</td>
+<td align="center">129 Kb</td>
+</tr>
+<tr>
+<td align="left">CompFiles</td>
+<td align="center">1969 Kb</td>
+<td align="center">149 Kb</td>
+</tr>
+<tr>
+<td align="left">FileCRC</td>
+<td align="center">1702 Kb</td>
+<td align="center">129 Kb</td>
+</tr>
+<tr>
+<td align="left">MiniCalc</td>
+<td align="center">1662 Kb</td>
+<td align="center">108 Kb</td>
+</tr>
+<tr>
+<td align="left">PePing</td>
+<td align="center">1709 Kb</td>
+<td align="center">129 Kb</td>
+</tr>
+<tr>
+<td align="left">Visual(4)</td>
+<td align="center">1716 Kb</td>
+<td align="center">207 Kb</td>
+</tr>
+<tr>
+<td align="left">GetWebPage(2)</td>
+<td align="center">2077 Kb</td>
+<td align="center">776 Kb</td>
 </tr>
 </tbody>
 </table>
@@ -173,13 +236,15 @@ optimization level, icon files, ...</p>
 <p>Notes:</p>
 
 <ol>
-<li>demonstration project included in the LLCL: <a href="https://github.com/FChrisF/LLCL">LLCL</a>
+<li>demonstration project included in the LLCL: <a href="https://FChrisF.github.io/LLCL">LLCL</a>
 </li>
 <li>due to the size of the Indy library itself, the ratio of
 the different executable sizes is bigger than usual</li>
 <li>because of the TTrayIcon component, this sample can't be
 compiled with the standard VCL with the old versions of
 Delphi (i.e. before Delphi 2006)</li>
+<li>PNG images support included into the LLCL Delphi version,
+while not into the standard VCL one.</li>
 </ol>
       </section>
     </div>
