Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ and Free Pascal/Lazarus.</p>
 compiled using the LLCL or the standard LCL/VCL (see for each
 sample in README.txt).</p>
 
+<p>Some of the sample projects use icons from "FatCow Farm
+Fresh Icons": <a href="http://www.fatcow.com/free-icons">http://www.fatcow.com/free-icons</a> .</p>
+
 <h2>
 <a id="using-only-the-llcl" class="anchor" href="#using-only-the-llcl" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using only the LLCL</h2>
 
@@ -137,51 +140,51 @@ optimization level, icon files, FPC version ...</p>
 <tr>
 <td align="left">Demo LLCLTest(1)</td>
 <td align="center">1721 Kb</td>
-<td align="center">141 Kb</td>
+<td align="center">142 Kb</td>
 <td align="center">464 Kb</td>
 <td align="center">89 Kb</td>
 </tr>
 <tr>
 <td align="left">CompFiles</td>
-<td align="center">1888 Kb</td>
-<td align="center">163 Kb</td>
-<td align="center">465 Kb</td>
-<td align="center">101 Kb</td>
+<td align="center">1887 Kb</td>
+<td align="center">164 Kb</td>
+<td align="center">463 Kb</td>
+<td align="center">100 Kb</td>
 </tr>
 <tr>
 <td align="left">FileCRC</td>
-<td align="center">1696 Kb</td>
-<td align="center">141 Kb</td>
-<td align="center">402 Kb</td>
-<td align="center">90 Kb</td>
+<td align="center">1695 Kb</td>
+<td align="center">142 Kb</td>
+<td align="center">401 Kb</td>
+<td align="center">89 Kb</td>
 </tr>
 <tr>
 <td align="left">MiniCalc</td>
 <td align="center">1652 Kb</td>
-<td align="center">118 Kb</td>
+<td align="center">120 Kb</td>
 <td align="center">379 Kb</td>
 <td align="center">75 Kb</td>
 </tr>
 <tr>
 <td align="left">PePing</td>
 <td align="center">1699 Kb</td>
-<td align="center">141 Kb</td>
+<td align="center">142 Kb</td>
 <td align="center">(3)</td>
 <td align="center">92 Kb</td>
 </tr>
 <tr>
 <td align="left">Visual(4)</td>
 <td align="center">1707 Kb</td>
-<td align="center">212 Kb</td>
+<td align="center">213 Kb</td>
 <td align="center">404 Kb</td>
 <td align="center">106 Kb</td>
 </tr>
 <tr>
 <td align="left">GetWebPage(2)</td>
-<td align="center">2237 Kb</td>
-<td align="center">813 Kb</td>
-<td align="center">830 Kb</td>
-<td align="center">590 Kb</td>
+<td align="center">2236 Kb</td>
+<td align="center">814 Kb</td>
+<td align="center">828 Kb</td>
+<td align="center">589 Kb</td>
 </tr>
 </tbody>
 </table>
@@ -197,38 +200,38 @@ optimization level, icon files, FPC version ...</p>
 <tbody>
 <tr>
 <td align="left">Demo LLCLTest(1)</td>
-<td align="center">1726 Kb</td>
+<td align="center">1587 Kb</td>
 <td align="center">129 Kb</td>
 </tr>
 <tr>
 <td align="left">CompFiles</td>
-<td align="center">1969 Kb</td>
-<td align="center">149 Kb</td>
+<td align="center">1803 Kb</td>
+<td align="center">150 Kb</td>
 </tr>
 <tr>
 <td align="left">FileCRC</td>
-<td align="center">1702 Kb</td>
-<td align="center">129 Kb</td>
+<td align="center">1564 Kb</td>
+<td align="center">130 Kb</td>
 </tr>
 <tr>
 <td align="left">MiniCalc</td>
-<td align="center">1662 Kb</td>
-<td align="center">108 Kb</td>
+<td align="center">1527 Kb</td>
+<td align="center">109 Kb</td>
 </tr>
 <tr>
 <td align="left">PePing</td>
-<td align="center">1709 Kb</td>
-<td align="center">129 Kb</td>
+<td align="center">1572 Kb</td>
+<td align="center">130 Kb</td>
 </tr>
 <tr>
 <td align="left">Visual(4)</td>
-<td align="center">1716 Kb</td>
-<td align="center">207 Kb</td>
+<td align="center">1578 Kb</td>
+<td align="center">208 Kb</td>
 </tr>
 <tr>
 <td align="left">GetWebPage(2)</td>
-<td align="center">2077 Kb</td>
-<td align="center">776 Kb</td>
+<td align="center">2076 Kb</td>
+<td align="center">777 Kb</td>
 </tr>
 </tbody>
 </table>
